--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.fictional_spork">
+    package="com.example.fictional_spork_admin">
    <application
         android:label="fictional_spork"
         android:name="${applicationName}"
